
- fixed a bug that prevented direct opening of files in editor from working
- fixed Find dialog (dind't select found entries in the list)
- poEdit 1.1.6 package contained out-of-date resources.zip by mistake,
  this is fixed now
- added an option to disable list rows shading
- minor UI tweaks
- added Chinese (zh_TW) translation
- several fixes related to handling of directory names with spaces


Version 1.1.6
-------------

- support for Windows XP native look & feel
- Win32 version is now Unicode-enabled
- fixes to the way multiline entries are stored in .po file
- i18n support in the app itself (finally!)
  (so far only Czech translation is available, translators welcome!)
- added an option to display .po file line numbers for catalog entries
- fixed crash when browsing certain source files
- added ability to open refered source files directly in the editor of
  choice instead of in built-in files viewer
- fixed wrong placement of progress indicator in the status bar (Win32)
- man page is now installed (Unix)
- poEdit now links with libdb-3.x for x > 1, too (Unix)
- RPM package now comes in two favors: poedit and poedit-semistatic
  (the latter is statically linked against wxGTK and libdb) (Unix)


Version 1.1.5
-------------

- upgraded to link against any of libdb-3.{1,2,3}
- fixed bug when editing entries in editable listbox control (Win32)
- updated ISO 639-1 table
- visually improved listbox
- Win32 binary package is now cross-compiled with Mingw32
- fixed Unix makefile to not attempt to install KDE and/or GNOME entries
  if you doesn't have neccessary write permissions


Version 1.1.4
-------------

- fixed bug in Search when looking for strings with non-ASCII
  characters in them
- charset combobox in catalog settings now remember values


Version 1.1.3
-------------

- added ability to edit comments
- nicer icons by Dean S. Jones
- new source code references browser
- new keyboard navigation
- various UI improvements and bugfixes