@@ -10,6 +10,7 @@ Version 1.1.7
 - minor UI tweaks
 - added Chinese (zh_TW) translation
 - several fixes related to handling of directory names with spaces
+- fixed lauching poEdit with filename as the argument
 
 
 Version 1.1.6
